--- a/metadata/metadata.ini
+++ b/metadata/metadata.ini
@@ -1,12 +1,18 @@
-[prodV1]
+[opensso.us.es]
 login_url = "https://opensso.us.es/opensso/UI/Login"
 logout_url = "https://opensso.us.es/opensso/UI/Logout"
 ws_base_url = "https://opensso.us.es/opensso/identity/"
 crt_serialnumber = "210592524451737690364240169455244055745"
 
-[preV1]
+[opensso-pre.us.es]
 login_url = "https://opensso-pre.us.es/opensso/UI/Login"
 logout_url = "https://opensso-pre.us.es/opensso/UI/Logout"
 ws_base_url = "https://opensso-pre.us.es/opensso/identity/"
 crt_serialnumber = "14662242386874795408"
 self_signed = TRUE
+
+[ssopre.us.es_001]
+login_url = "https://ssopre.us.es/OPENSSO/index.php/UI/Login"
+logout_url = "https://ssopre.us.es/OPENSSO/index.php/UI/Logout"
+ws_base_url = "https://ssopre.us.es/OPENSSO/index.php/identity/"
+crt_serialnumber = "1021042076"
