Add metadata for sso.us.es

--- a/metadata/metadata.ini
+++ b/metadata/metadata.ini
@@ -16,3 +16,9 @@ login_url = "https://ssopre.us.es/OPENSSO/index.php/UI/Login"
 logout_url = "https://ssopre.us.es/OPENSSO/index.php/UI/Logout"
 ws_base_url = "https://ssopre.us.es/OPENSSO/index.php/identity/"
 crt_serialnumber = "1021042076"
+
+[sso.us.es_001]
+login_url = "https://sso.us.es/OPENSSO/index.php/UI/Login"
+logout_url = "https://sso.us.es/OPENSSO/index.php/UI/Logout"
+ws_base_url = "https://sso.us.es/OPENSSO/index.php/identity/"
+crt_serialnumber = "1021042076"
