--- a/metadata/metadata.ini
+++ b/metadata/metadata.ini
@@ -17,3 +17,13 @@ ws_base_url = "https://ssopre.us.es/OPENSSO/index.php/identity/"
 login_url = "https://sso.us.es/OPENSSO/index.php/UI/Login"
 logout_url = "https://sso.us.es/OPENSSO/index.php/UI/Logout"
 ws_base_url = "https://sso.us.es/OPENSSO/index.php/identity/"
+
+[ssopre.us.es_003]
+login_url = "https://ssopre.us.es/OPENSSO/index.php/UI/Login"
+logout_url = "https://ssopre.us.es/OPENSSO/index.php/UI/Logout"
+ws_base_url = "https://ssopre.us.es/OPENSSO/index.php/identity/"
+
+[sso.us.es_003]
+login_url = "https://sso.us.es/OPENSSO/index.php/UI/Login"
+logout_url = "https://sso.us.es/OPENSSO/index.php/UI/Logout"
+ws_base_url = "https://sso.us.es/OPENSSO/index.php/identity/"
